third_party/move/move-compiler-v2/tests/lambda/storable/return_func_ok.lambda.exp

Diagnostics:
error: function type `|integer|_` is not allowed as a type argument (type was inferred)
   ┌─ tests/lambda/storable/return_func_ok.move:93:21
   │
93 │         let funcs = vector[choose_function(0), choose_function(1), choose_function(2)];
   │                     ^^^^^^
   │
   = required by instantiating vector type parameter

error: function type `|u64|u64 with store` is not allowed as a type argument (type was inferred)
   ┌─ tests/lambda/storable/return_func_ok.move:93:21
   │
93 │         let funcs = vector[choose_function(0), choose_function(1), choose_function(2)];
   │                     ^^^^^^
   │
   = required by instantiating vector type parameter
